--- a/src/index.html
+++ b/src/index.html
@@ -30,31 +30,31 @@
             <div class="table">
                  <ul class="point_list">
                     <li class="point_item">
-                        <span class="point_span compPoint">4</span>
+                        <span class="point_span compPoint">-</span>
                     </li>
                     <li class="point_item">
-                        <span class="point_span playPoint">12</span>
+                        <span class="point_span playPoint">-</span>
                     </li>
                  </ul>
                 <!--Cards and buttons-->
                 <div class="card_cover">
                       <ul class="enemy_card_list card_list">
-                        <li class="enemy_card_item card_item"><img src="./images/skin.jpg" alt="" class="card"></li>
-                        <li class="enemy_card_item card_item" ><img src="./images/skin.jpg" alt=""class="card"></li>
-                        <li class="enemy_card_item card_item"><img src="./images/skin.jpg" alt="" class="card"></li>
+                        <li class="enemy_card_item card_item"></li>
+                        <li class="enemy_card_item card_item"></li>
+                        <li class="enemy_card_item card_item"></li>
                       </ul>
                      <ul class="card_btn_list">
                    <li class="card_btn_item">
-                       <button class="card_btn" data-action="pick">Pick</button>
+                       <button class="card_btn pick">Pick</button>
                     </li>
                    <li class="card_btn_item">
-                       <button class="card_btn" data-action="stop">Stop</button>
+                       <button class="card_btn stop">Stop</button>
                     </li>
                      </ul> 
                      <ul class="player_card_list card_list">
-                        <li class="player_card_item card_item"><img src="./images/clubs/ace-of-clubs.jpg" alt="" class="card"></li>
-                        <li class="player_card_item card_item"><img src="./images/diamonds/ace-of-diamonds.jpg" alt="" class="card"></li>
-                        <li class="player_card_item card_item"><img src="./images/spades/ace-of-spades.jpg" alt="" class="card"></li>
+                        <!--<li class="player_card_item card_item"></li>
+                        <li class="player_card_item card_item"></li>
+                        <li class="player_card_item card_item"></li>-->
                      </ul>
                 </div>
                 <span class="player_nickName">@Name@</span>
