--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,9 @@
                 <!--Cards and buttons-->
                 <div class="card_cover">
                       <ul class="enemy_card_list card_list">
-                        <li class="enemy_card_item card_item"></li>
-                        <li class="enemy_card_item card_item"></li>
-                        <li class="enemy_card_item card_item"></li>
+                        <li class="enemy_card_item card_item hidden"></li>
+                        <li class="enemy_card_item card_item hidden"></li>
+                        <li class="enemy_card_item card_item hidden"></li>
                       </ul>
                      <ul class="card_btn_list">
                    <li class="card_btn_item">
@@ -74,7 +74,21 @@
         <button class="rule_btn">Rules</button>
         </div>
     </div>
+    
 
+    <div class="final_back is-none">
+        <div class="final_window">
+            <h2 class="final_title"></h2>
+            <ul class="filan_buttons_list">
+                <li class="final_buttons_item">
+                    <button class="retry_btn">Retry</button>
+                </li>
+                <li class="final_buttons_item">
+                    <button class="exit_btn">Exit</button>
+                </li>
+            </ul>
+        </div>
+    </div>
    <!-- <audio class="casino" src="./audio/казино.mp3"></audio>-->
 
     <script src="./script/index.js"></script>
