--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,10 @@
           <!-- <ul class="start_button_list">
                <li class="start_button_item">-->
                    <h2 class="start_title">Greetings!</h2>
-                   <input type="text" class="hero_name_inp" maxlength="12">
-                   <button class="start_btn">Play</button>
+                   <div class="name_form">
+                    <input type="text" class="hero_name_inp" maxlength="12">
+                    <button class="start_btn">Play</button>
+                   </div>
               <!--   </li>
               <li class="start_button_item">
                    <button class="start_btn">Not Play</button>
