--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     <title>Ochk0</title>
 </head>
 <body>
-   <div class="backdrop ">
-       <div class="start_window">
+   <div class="backdrop is-none">
+       <div class="start_window ">
           <!-- <ul class="start_button_list">
                <li class="start_button_item">-->
                    <h2 class="start_title">Greetings!</h2>
@@ -26,7 +26,7 @@
    </div>
      
     <div class="container">
-        <div class="game_field is-none">
+        <div class="game_field is-">
             <h1 class="main_title">21 Points</h1>
             <h1 class="side_title">Enjoy</h1>
             <div class="table">
