--- a/src/index.html
+++ b/src/index.html
@@ -116,6 +116,25 @@
     <audio src="./audio/uwu.mp3" class="uwu"></audio>
     <audio src="./audio/su.mp3" class="su"></audio>
 
+    <!--audio for radio-->
+    <audio src="./audio/hardcore.mp3" class="t1"></audio>
+    <audio src="./audio/no-game.mp3" class="t1"></audio>
+    <audio src="./audio/punk.mp3" class="t1"></audio>
+    <audio src="./audio/riot.mp3" class="t1"></audio>
+    <div class="audio_player">
+        <ul class="audio_control_list">
+            <li class="audio_control_item">
+                <button class="stop">Stop</button>
+            </li>
+            <li class="audio_control_item">
+                <button class="play">Play</button>
+            </li>
+            <li class="audio_control_item">
+                <button class="next">Next</button>
+            </li>
+        </ul>
+    </div>
+
 
     <script src="./script/index.js"></script>
 </body>
